<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/warnaa"
    tools:context=".MainActivity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Mata Pelajaran"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/purple_500"
        android:layout_margin="12dp">
    </TextView>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:columnCount="2"
        android:rowCount="3">

        <androidx.cardview.widget.CardView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity = "center_horizontal|center_vertical">
                <ImageView
                    android:id="@+id/iv_sains"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_gravity = "center_horizontal|center_vertical"
                    android:src="@drawable/astronomy"
                    android:text="@string/pindah_activity_2">
                </ImageView>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="Sains"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold">
                </TextView>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity = "center_horizontal|center_vertical">
                <ImageView
                    android:id="@+id/iv_matematika"
                    android:layout_width="95dp"
                    android:layout_height="95dp"
                    android:layout_gravity = "center_horizontal|center_vertical"
                    android:src="@drawable/calculator"
                    android:text="@string/pindah_activity_3">
                </ImageView>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="Matematika"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold">
                </TextView>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity = "center_horizontal|center_vertical">
                <ImageView
                    android:id="@+id/iv_biologi"
                    android:layout_width="95dp"
                    android:layout_height="95dp"
                    android:layout_gravity = "center_horizontal|center_vertical"
                    android:src="@drawable/microscope"
                    android:text="@string/pindah_activity_4">
                </ImageView>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="Biologi"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold">
                </TextView>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity = "center_horizontal|center_vertical">
                <ImageView
                    android:id="@+id/iv_kimia"
                    android:layout_width="95dp"
                    android:layout_height="95dp"
                    android:layout_gravity = "center_horizontal|center_vertical"
                    android:src="@drawable/molecule"
                    android:text="@string/pindah_activity_5">
                </ImageView>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="Kimia"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold">
                </TextView>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity = "center_horizontal|center_vertical">
                <ImageView
                    android:id="@+id/iv_senibudaya"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_gravity = "center_horizontal|center_vertical"
                    android:src="@drawable/paint"
                    android:text="@string/pindah_activity_6">
                </ImageView>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="Seni Budaya"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold">
                </TextView>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity = "center_horizontal|center_vertical">
                <ImageView
                    android:id="@+id/iv_fisika"
                    android:layout_width="95dp"
                    android:layout_height="95dp"
                    android:layout_gravity = "center_horizontal|center_vertical"
                    android:src="@drawable/physics"
                    android:text="@string/pindah_activity_7">
                </ImageView>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="Fisika"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold">
                </TextView>
            </LinearLayout>
        </androidx.cardview.widget.CardView>


    </GridLayout>

</RelativeLayout>